--- a/src/Login/Login.scss
+++ b/src/Login/Login.scss
@@ -12,9 +12,16 @@ input {
     height: 25px;
     line-height: 25px;
     cursor: pointer;
+    border-radius: 12px;
 
     &:hover {
         background-color: rgb(80, 75, 227);
+    }
+
+    &:active {
+        background-color: rgb(128, 128, 128);
+        border-style: inset;
+        border-color: black;
     }
 
     &.disabled {
@@ -32,8 +39,8 @@ input {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background: black;
 }
 
