--- a/src/global.scss
+++ b/src/global.scss
@@ -1,8 +1,77 @@
 $header-background-color: rgba(94, 72, 69, 1);
 $header_color: rgba(250, 250, 250, 1);
+$header-bar-parts-background-color: rgba(125, 93, 91, 1);
+
 $messaging-background-color: rgba(125, 93, 91, 1);
 $messaging-color: rgba(250, 250, 250, 1);
+
 $navigation-background-color: rgba(151, 152, 187, 1);
 $navigation-color: black;
+
 $sidebar-background-color: $navigation-background-color;
 $sidebar-color: $navigation-color;
+
+body,
+div,
+input {
+    box-sizing: border-box;
+}
+
+.btn {
+    text-align: center;
+    padding: 0 5px;
+    background-color: rgb(32, 32, 32);
+    color: white;
+    height: 25px;
+    line-height: 25px;
+    cursor: pointer;
+    border-radius: 12px;
+
+    &:hover {
+        background-color: rgb(80, 75, 227);
+    }
+
+    &:active {
+        background-color: rgb(128, 128, 128);
+        border-style: inset;
+        border-color: black;
+    }
+
+    &.disabled {
+        background-color: rgb(128, 128, 128);
+        pointer-events: none;
+        cursor: auto;
+    }
+}
+
+.label {
+    height: 30px;
+    line-height: 30px;
+    width: 100px;
+    overflow: hidden;
+}
+
+.input {
+    position: relative;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 30px;
+
+    input {
+        position: relative;
+        top: 3px;
+        width: calc(100% - 20px);
+        padding: 5px;
+        border: 1px solid black;
+    }
+
+    .toggle {
+        width: 50px;
+        position: absolute;
+        top: 4px;
+        right: 25px;
+    }
+}
