First cut at artist list.
The list shows and supports infinite scrolling (one way only).

New CSS for card-lists and card.

A scrollListContainer mixin.  I'm seriously considering just
having any child of .content having this enabled.  Filters
as well.

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 @mixin areaLayout($area, $bgColor, $fgColor, $width: 100%, $height: 100%, $top: 0, $left: 0, $right: null, $bottom: null) {
   grid-area: $area;
   position: relative;
+  overflow: hidden;
 
   @if ($bottom == null) {
     top: $top;
