--- a/src/Widgets/LabeledInput.scss
+++ b/src/Widgets/LabeledInput.scss
@@ -1,6 +1,12 @@
 @import '../global.scss';
 
 .labeled-input {
+    position: relative;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -18,5 +24,12 @@
     input {
         flex-grow: 2;
         width: 100%;
+    }
+
+    .toggle {
+        width: 4em;
+        position: absolute;
+        top: 0;
+        right: 0;
     }
 }
