--- a/src/global.scss
+++ b/src/global.scss
@@ -32,7 +32,7 @@ input[type="button"],
     height: $button-font-size;
     line-height: $button-font-size - 5px; // Subtract 5px to account for the padding
     cursor: pointer;
-    border-radius: $button-font-size / 2;
+    border-radius: calc($button-font-size / 2);
     
     &:hover {
         background-color: rgb(80, 75, 227);
