--- a/src/Widgets/LabeledInput.scss
+++ b/src/Widgets/LabeledInput.scss
@@ -1,5 +1,6 @@
 @import '../global.scss';
 
+.picker-button,
 .labeled-input {
     position: relative;
     top: 0;
@@ -21,6 +22,7 @@
         line-height: $standard-font-size;
     }
 
+    button,
     input {
         flex-grow: 2;
         width: 100%;
@@ -32,4 +34,8 @@
         top: 0;
         right: 0;
     }
+}
+
+.picker-button {
+    justify-content: flex-start;
 }
