--- a/src/global.scss
+++ b/src/global.scss
@@ -75,6 +75,13 @@ input
 @mixin scrollListContainer {
     height: 100%;
     overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+@mixin ellipsisText {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .list-component {
@@ -108,6 +115,7 @@ input
     @include scrollListContainer;
 }
 
+.picker-list,
 .card-list {
     background: linear-gradient(160deg, rgb(64, 64, 60), rgb(64, 60, 64), rgb(60, 64, 64));
     list-style: none;
@@ -127,6 +135,37 @@ input
         font-size: $standard-font-size * 2;
         content: 'No items found';
     }
+}
+
+.picker-component {
+    position: absolute;
+    right: 0;
+    height: 15em;
+    width: 10em;
+    padding: 0;
+    margin: 0;
+
+    .list-container {
+        width: 10em;
+        padding: 0;
+        margin: 0;
+    }
+}
+
+.picker-list {
+    flex-direction: column;
+    flex-wrap: nowrap;
+
+    width: 100%;
+}
+
+.picker-item {
+    background-color: $messaging-background-color;
+    color: $messaging-color;
+    @include ellipsisText;
+    font-size: $standard-font-size;
+    line-height: $standard-font-size;
+    padding: 0.5em 1em;
 }
 
 $card-background: linear-gradient(rgb(250, 180, 160), rgb(160, 180, 250));
