Handle losing the session better.
- Added a function to force the login state
- Both CollectionBase and ModelBase force the login state
  to false on a 401 from a fetch.

- Added testHelps/modelTools for tests.  This prevents a
  problem where mocks weren't working because a module
  was imported before mocking occured.

- Restyled Top.scss to look a little better.
- Changed the utility background to be less busy.

--- a/src/Mode/Top.scss
+++ b/src/Mode/Top.scss
@@ -21,4 +21,13 @@
             }
         }
     }
+
+    >div {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 5px;
+        margin-top: 10px;
+    }
 }
