--- a/src/Mode/Authentication/Login/Login.scss
+++ b/src/Mode/Authentication/Login/Login.scss
@@ -1,4 +1,4 @@
-@import '../../../global.scss';
+@use '../../../global.scss';
 
 .login-header {
     text-align: center;
@@ -23,7 +23,7 @@
     width: 100%;
     height: 100%;
     background: transparent;
-    @include form-container;
+    @include global.form-container;
 
     .info {
         display: flex;
