--- a/src/global.scss
+++ b/src/global.scss
@@ -13,13 +13,18 @@
     --color-blue-220: rgb(6, 6, 220);
     --color-blue-250: rgb(27, 27, 250);
 
+    --color-cyan-225: rgb(0, 225, 225);
+    --color-cyan-235: rgb(0, 235, 235);
+    --color-cyan-245: rgb(0, 245, 245);
+    --color-cyan-255: rgb(0, 255, 255);
+
     --container-background-color: var(--color-white-200);
     --container-color: var(--color-black-50);
     --container-border: .5rem solid var(--color-black-25);
     --form-container-border: .25rem solid var(--color-peach-175);
 
-    --header-background-color: rgb(0, 255, 0);
-    --header-color: rgb(255, 255, 0);
+    --header-background-color: var(--color-cyan-225);
+    --header-color: var(--color-black-50);
     --header-bar-parts-background-color: rgb(255, 0, 0);
 
     --messaging-background-color: rgb(0, 0, 255);
@@ -34,8 +39,9 @@
     --standard-font-size: 2rem;
 
     --title-font-size: 4rem;
+    --subtitle-font-size: 3rem;
 
-    --card-background: rgba(127, 127, 127, 0.5);
+    --card-background: var(--color-peach-175);
 
     --standard-button-size: calc(var(var(--standard-font-size)) + 1rem);
     --primary-button-background-color: rgb(76, 76, 243);
@@ -49,6 +55,7 @@
     color: var(--black-50);
     border: var(--container-border);
     padding: 1rem;
+    border-radius: 2rem;
 }
 
 @mixin form-container {
@@ -126,16 +133,9 @@ input .input {
 
 // Parent element must have height specificed.  100% should work.
 @mixin scrollListContainer($overflow-x: hidden) {
-    height: 100%;
-    overflow-y: auto;
-    overflow-x: $overflow-x;
-
-    > * {
-        margin-top: 0;
-        margin-bottom: 0;
-        padding-top: 0;
-        padding-bottom: 0;
-    }
+    // height: 100%;
+    width: 100%;
+    overflow: hidden auto;
 }
 
 @mixin ellipsisText {
@@ -147,16 +147,15 @@ input .input {
 .list-component {
     height: 100%;
     width: 100%;
+    overflow: hidden;
+    border-radius: .5rem;
 
     display: grid;
-    grid-template-rows: var(--standard-button-size) + 10px auto;
-    grid-template-areas:
-        "header"
-        "content"
+    grid-template-rows: auto 1fr;
+    gap: 0.5rem;
 }
 
 .list-controls {
-    grid-area: header;
     height: var(--standard-button-size) + 10px;
     width: 100%;
     display: flex;
@@ -165,24 +164,29 @@ input .input {
     padding: 0 10px;
 
     .title {
-        font-size: var(--title-font-size);
+        font-size: var(--subtitle-font-size);
         font-weight: bold;
+        padding: .25rem;
     }
+
 }
 
 .list-container {
-    grid-area: content;
+    border-radius: 0.5rem;
     @include scrollListContainer;
 }
 
 .picker-list,
 .card-list {
+    width: 100%;
     background: linear-gradient(160deg, rgb(64, 64, 60), rgb(64, 60, 64), rgb(60, 64, 64));
     list-style: none;
-    padding: 5px;
+    overflow: hidden;
+    padding: 0;
+    border-radius: 1rem;
 
     display: grid;
-    grid-template-columns: 1fr;
+    grid-auto-flow: row;
     gap: 5px;
 
     &:empty:after {
@@ -193,36 +197,6 @@ input .input {
         content: 'No items found';
     }
 }
-
-// This was a dumb idea. Do it another way.  Do Not Commit
-// $layout-allowance: 200px;
-// $minimum-card-width: 400px;
-
-// @media(min-width: calc($minimum-card-width * 2 + $layout-allowance)) {
-//     .card-list {
-//         grid-template-columns: repeat(2, 1fr);
-//     }
-// }
-
-// @media(min-width: calc($minimum-card-width * 3 + $layout-allowance)) {
-//     .card-list {
-//         grid-template-columns: repeat(3, 1fr);
-
-//         &:has(> .card.wide) {
-//             grid-template-columns: repeat(2, 1fr);
-//         }
-//     }
-// }
-
-// @media(min-width: calc($minimum-card-width * 4 + $layout-allowance)) {
-//     .card-list {
-//         grid-template-columns: repeat(4, 1fr);
-
-//         &:has(> .card.wide) {
-//             grid-template-columns: repeat(4, 1fr);
-//         }
-//     }
-// }
 
 .picker-component {
     position: absolute;
@@ -260,24 +234,21 @@ input .input {
     background: var(--card-background);
     box-shadow: 5px 5px 10px 1px rgb(0, 0, 0);
     font-size: var(--standard-font-size);
-    line-height: var(--standard-font-size);
+    line-height: 1;
     width: 100%;
-    min-width: var(--minimum-card-width);
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     border-radius: .5em;
-    padding: 0;
-
-    &.wide {
-        grid-column: span 2;
-        min-width: calc(var(--minimum-card-width) * 2);
-    }
 
     .header {
         border-bottom: thin black solid;
         background-color: var(--header-background-color);
         color: var(--header-color);
+        padding: .5rem;
+        border-radius: 1rem 1rem 0 0;
+        text-align: center;
+        line-height: 1;
     }
 
     .name {
