Issue 90 - Refactor LabeledSelect
- Factored it out to SelectInput
- Use LabeledInput to manage the labels.
- Minor changes to the form for testing.

--- a/src/Components/Widgets/Buttons/Button/Button.scss
+++ b/src/Components/Widgets/Buttons/Button/Button.scss
@@ -5,8 +5,8 @@
   border-style: ridge;
   border-width: .25em;
   border-color: var(--primary-button-background-color);
-  font-size: var(--standard-font-size);
-  line-height: var(--standard-font-size);
+  font-size: var(--standard-button-font-size);
+  line-height: 1;
   padding: .25em .5em;
   cursor: pointer;
 
