--- a/src/Components/Widgets/Buttons/CloseButton/CloseButton.scss
+++ b/src/Components/Widgets/Buttons/CloseButton/CloseButton.scss
@@ -1,6 +1,6 @@
 .close-button {
   background: transparent;
-  font-size: var(--standard-font-size);
+  font-size: var(--standard-button-font-size);
   line-height: 1;
   cursor: pointer;
   padding: 0;
