--- a/src/global.scss
+++ b/src/global.scss
@@ -30,22 +30,22 @@
     --messaging-background-color: rgb(0, 0, 255);
     --messaging-color: rgb(255, 0, 255);
 
-    --navigation-background-color: white;
-    --navigation-color: black;
+    --navigation-background-color: var(--color-white-200);
+    --navigation-color: var(--color-black-25);
 
     --sidebar-background-color: $navigation-background-color;
     --sidebar-color: $navigation-color;
 
     --standard-font-size: 1.5rem;
 
-    --title-font-size: 4rem;
-    --subtitle-font-size: 3rem;
+    --title-font-size: 3rem;
+    --subtitle-font-size: 2rem;
 
     --card-background: var(--color-peach-175);
 
     --standard-button-size: calc(var(var(--standard-font-size)) + 1rem);
-    --standard-button-font-size: 2rem;
-    --primary-button-background-color: rgb(76, 76, 243);
+    --standard-button-font-size: 1.5rem;
+    --primary-button-background-color: var(--color-peach-175);
     --primary-button-color: rgb(25, 25, 25);
     --secondary-button-background-color: var(--color-black-50);
     --secondary-button-color: var(--color-white-200);
