--- a/src/Components/Widgets/Buttons/Button/Button.scss
+++ b/src/Components/Widgets/Buttons/Button/Button.scss
@@ -1,32 +1,14 @@
+@use '@styles/mixins.scss';
+
 .button {
-  color: var(--primary-button-color);
-  background-color: var(--primary-button-background-color);
-  border-radius: 2rem;
-  border-style: ridge;
-  border-width: .25em;
-  border-color: var(--primary-button-background-color);
-  font-size: var(--standard-button-font-size);
-  line-height: 1;
-  padding: .25em .5em;
-  cursor: pointer;
+  --button-color: var(--primary-button-color);
+  --button-background-color: var(--primary-button-background-color);
+  --button-font-size: var(--standard-button-font-size);
+
+  @include mixins.buttonBase;
 
   &__secondary {
-    color: var(--secondary-button-color);
-    background-color: var(--secondary-button-background-color);
-    border-color: var(--secondary-button-background-color);
-  }
-
-  &:hover:not(:disabled) {
-    border-style: outset;
-  }
-
-  &:active:not(:disabled) {
-    border-style: inset;
-  }
-
-  &:disabled {
-    cursor: default;
-    color: rgb(50%, 50%, 50%);
-    opacity: .5;
+    --button-color: var(--secondary-button-color);
+    --button-background-color: var(--secondary-button-background-color);
   }
 }
