--- a/src/global.scss
+++ b/src/global.scss
@@ -4,6 +4,7 @@
     --color-black-50: rgb(50, 50, 50);
 
     --color-white: rgb(255, 255, 255);
+    --color-white-245: rgb(245, 245, 245);
     --color-white-200: rgb(200, 200, 200);
     --color-white-180: rgb(180, 180, 180);
 
