Issue 87 - The artist editor now works.
There is probably more to be done, but it's mostly working.

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -14,6 +14,13 @@
   padding: 2.5rem;
 }
 
+@mixin standard-dialog {
+  max-height: 75vh;
+  max-width: 75vw;
+  background: transparent;
+  border: none;
+}
+
 @mixin utiliity-component-background {
 
   a {
